--- a/student-bio-ian.html
+++ b/student-bio-ian.html
@@ -7,7 +7,7 @@
 	<h1>Student Bio</h1>
 	<h2>Ian Bowers</h2>
 	<img src="img/ian-on-stage.jpg" alt="Ian on stage at SAK">
-	<p></p>
+	<p>I'm Ian. I'm from Orlando, FL and I created this student bio as an in-class assignment for my coding bootcamp. This is being uploaded to Git.hub because I gotta do what they tell me. It's a bootcamp.</p>
 	<h2>Contact Info</h2>
 	<ul>
 		<li><b>Email:</b> <a href="mailto:ianmarshallbowers@gmail.com">ianmarshallbowers@gmail.com</a></li>
