Add main-style CSS and updated student-bio-ian

--- a/student-bio-ian.html
+++ b/student-bio-ian.html
@@ -2,17 +2,26 @@
 <html>
 <head>
 	<title>Student Bio of Ian Bowers</title>
+	<link rel="stylesheet" type="text/css" href="main-style.css">
 </head>
 <body>
+<div class="container">
 	<h1>Student Bio</h1>
 	<h2>Ian Bowers</h2>
+	<div id="bio-image">
 	<img src="img/ian-on-stage.jpg" alt="Ian on stage at SAK">
+	</div>
+	<div id="main-bio">
 	<p>I'm Ian. I'm from Orlando, FL and I created this student bio as an in-class assignment for my coding bootcamp. This is being uploaded to Git.hub because I gotta do what they tell me. It's a bootcamp.</p>
-	<h2>Contact Info</h2>
+	</div>
+	<div id="contact-info">
+	<h3>Contact Info</h3>
 	<ul>
 		<li><b>Email:</b> <a href="mailto:ianmarshallbowers@gmail.com">ianmarshallbowers@gmail.com</a></li>
 		<li><b>Github:</b> <a href="https://github.com/ibowers" target="_blank">ibowers</a></li>
 		<li><b>Portfolio:</b> <a href="#">Coming Soon</a></li>
 	</ul>
+	</div>
+</div>	
 </body>
 </html>
