--- a/student-bio-ian.html
+++ b/student-bio-ian.html
@@ -5,22 +5,25 @@
 	<link rel="stylesheet" type="text/css" href="main-style.css">
 </head>
 <body>
-<div class="container">
+<header>
 	<h1>Student Bio</h1>
-	<h2>Ian Bowers</h2>
-	<div id="bio-image">
-	<img src="img/ian-on-stage.jpg" alt="Ian on stage at SAK">
-	</div>
+</header>
+
+<div class="container">
 	<div id="main-bio">
+	<h2>Ian Bowers</h2>
+	
+	<img src="img/ian-on-stage.jpg" alt="Ian on stage at SAK" id="bio-image">
+	
 	<p>I'm Ian. I'm from Orlando, FL and I created this student bio as an in-class assignment for my coding bootcamp. This is being uploaded to Git.hub because I gotta do what they tell me. It's a bootcamp.</p>
-	</div>
+	</div>	
 	<div id="contact-info">
-	<h3>Contact Info</h3>
-	<ul>
-		<li><b>Email:</b> <a href="mailto:ianmarshallbowers@gmail.com">ianmarshallbowers@gmail.com</a></li>
-		<li><b>Github:</b> <a href="https://github.com/ibowers" target="_blank">ibowers</a></li>
-		<li><b>Portfolio:</b> <a href="#">Coming Soon</a></li>
-	</ul>
+		<h2>Contact Info</h3>
+		<ul>
+			<li><b>Email:</b> <a href="mailto:ianmarshallbowers@gmail.com">ianmarshallbowers@gmail.com</a></li>
+			<li><b>Github:</b> <a href="https://github.com/ibowers" target="_blank">ibowers</a></li>
+			<li><b>Portfolio:</b> <a href="#">Coming Soon</a></li>
+		</ul>
 	</div>
 </div>	
 </body>
